# ngo

./: .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: buildwheel.yml  cd-pre.yml  cd.yml  ci-test.yml  ci.yml  docs.yml  publish-docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
doc/: index.rst
src/ngo/: __init__.py  __main__.py  aggregate_equality1.py  api.py  cleanup.py  dependency.py  inline.py  literal_duplication.py  math_simplification.py  minmax_aggregates.py  normalize.py  projection.py  sum_aggregates.py  symmetry.py  unused.py
src/ngo/utils/: ast.py  globals.py  logger.py  parser.py
tests/: test_ast.py  test_cleanup.py  test_dependency.py  test_equal_variable.py  test_global.py  test_inline.py  test_literal_duplication.py  test_main.py  test_math_simplification.py  test_minmax_aggregates.py  test_normalize.py  test_projection.py  test_regression.py  test_sum_aggregates.py  test_symmetry.py  test_unused.py  test_util.py
