[metadata]
name = ngo
version = 0.0.1
author = Max Ostrowski
author_email = max.ostrowski@potassco.com
description = Optimizes non ground logic programs.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://potassco.org/

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    importlib_metadata;python_version<'3.8'
    clingo>=5.7.0,<6.0
    networkx>=3.1

[options.packages.find]
where = src

[options.extras_require]
format =
    black
    isort
lint_ruff =
    ruff
lint_pylint =
    pylint
    ngo[test]
typecheck =
    types-setuptools
    mypy
    networkx-stubs
    ngo[test]
test =
    coverage[toml]
    pytest
doc =
    sphinx
    sphinx_rtd_theme
    nbsphinx
dev =
    pre-commit
    ngo[test,typecheck,lint_pylint,lint_ruff]

[options.entry_points]
console_scripts =
    ngo = ngo.__main__:main
